--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.1"
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "ajax": "^0.0.4",
+        "jquery": "^3.6.3"
     }
 }
