--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
+        "@fullcalendar/core": "^6.1.9",
+        "@fullcalendar/daygrid": "^6.1.9",
         "ajax": "^0.0.4",
         "jquery": "^3.6.3"
     }
