--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=tapm
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=tapm
+DB_PASSWORD=tapm
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
