--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.1",
-        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -16,9 +15,17 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
+        "@fullcalendar/bootstrap": "^6.1.9",
         "@fullcalendar/core": "^6.1.9",
         "@fullcalendar/daygrid": "^6.1.9",
         "ajax": "^0.0.4",
-        "jquery": "^3.6.3"
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.11.1",
+        "chart": "^0.1.2",
+        "chart.js": "^3.9.1",
+        "fullcalendar": "^6.1.9",
+        "jquery": "^3.7.1",
+        "moment": "^2.29.4",
+        "toaster": "^0.1.2"
     }
 }
